[package]
name = "eisen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "eisen is a simple application/game engine"
homepage = "https://github.com/Ipotrick/eisen"
repository = "https://github.com/Ipotrick/eisen"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
cgmath = "0.18"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "35896df" }
pollster = "0.2"
bytemuck = { version = "1.7.2", features = ["derive"] }
num_cpus = "1.0"
smallbox = "0.8"
futures = "0.3.17"
async-std = "1.7.0"
crossbeam-channel = "0.5.1"
rustc-hash = "*"
profiling = { version = "*", features = ["profile-with-tracy"] }
spin_sleep = "1.0.0"